aau/sf_autobackup/objects/Bus_Stops_Routes__c.object
<CustomObject>
    <description>junction for stops and routes</description>
    <fields>
        <fullName>Bus_Route__c</fullName>
        <label>Bus Route</label>
        <referenceTo>Bus_Route__c</referenceTo>
        <relationshipLabel>Bus Stops Routes</relationshipLabel>
        <relationshipName>Bus_Stops_Routes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Bus_Stop__c</fullName>
        <label>Bus Stop</label>
        <referenceTo>Bus_Stop__c</referenceTo>
        <relationshipLabel>Bus Stops Routes</relationshipLabel>
        <relationshipName>Bus_Stops_Routes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Stop_Order__c</fullName>
        <description>Order of stops. Must be in order when plotted by Gmaps</description>
        <label>Stop Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bus Stops Routes</label>
    <nameField>
        <label>Bus Stops Routes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bus Stops Routes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>